--- a/hello_world/templates/hello_world/base.html
+++ b/hello_world/templates/hello_world/base.html
@@ -11,6 +11,10 @@
     <header>
         <div class="site-header">
             <h1>{% block header %}My Site{% endblock %}</h1>
+            <nav class="site-nav">
+                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'about' %}">About</a>
+            </nav>
         </div>
     </header>
     <main>
