--- a/hello_world/templates/hello_world/base.html
+++ b/hello_world/templates/hello_world/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{{ title|default:"My Site" }}{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'hello_world/css/style.css' %}">
+    <link rel="stylesheet" href="static/hello_world/assets/css/styles.css">
 </head>
 <body>
     <header>
@@ -14,6 +14,7 @@
             <nav class="site-nav">
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'about' %}">About</a>
+                
             </nav>
         </div>
     </header>
