Trying to fix errors

--- a/hello_world/static/hello_world/assets/css/style.css/style.css
+++ b/hello_world/static/hello_world/assets/css/style.css/style.css
@@ -1,7 +1,7 @@
 /* Basic styles for hello_world app */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: #f5f7fa;
+  background: #11366d;
   color: #222;
   margin: 0;
 }
