--- a/hello_world/templates/hello_world/base.html
+++ b/hello_world/templates/hello_world/base.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{{ title|default:"My Site" }}{% endblock %}</title>
-    {% load static %}
+    <title>HELLO WORLD</title>
+    
     <link rel="stylesheet" href="static/hello_world/assets/css/styles.css">
 </head>
 <body>
     <header>
         <div class="site-header">
-            <h1>{% block header %}My Site{% endblock %}</h1>
+            <h1>HELLO WORLD</h1>
             <nav class="site-nav">
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'about' %}">About</a>
