--- a/hello_world/templates/hello_world/index.html
+++ b/hello_world/templates/hello_world/index.html
@@ -1,12 +1,18 @@
-{% extends "hello_world/base.html" %}
 
-{% block title %}Home — {{ title|default:"My Site" }}{% endblock %}
 
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HELLO WORLD</title>
+   
+    <link rel="stylesheet" href="static/hello_world/assets/css/styles.css">
+</head>
  
 <div class="container">
   <h2>Welcome!</h2>
   <p>This is the homepage served from a Django template.</p>
 </div>
-{% endblock %}
+
  
