Styles problem with links

--- a/hello_world/templates/hello_world/about.html
+++ b/hello_world/templates/hello_world/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HELLO WORLD</title>
    
-    <link rel="stylesheet" href="static/hello_world/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <div class="container">
   <h2>About This Project</h2>
