--- a/hello_world/templates/hello_world/base.html
+++ b/hello_world/templates/hello_world/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HELLO WORLD</title>
     
-    <link rel="stylesheet" href="static/hello_world/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        {% block content %}{% endblock %}
+        
     </main>
     <footer>
         <p>&copy; {{ year|default:"2026" }}</p>
