--- a/hello_world/templates/hello_world/about.html
+++ b/hello_world/templates/hello_world/about.html
@@ -11,6 +11,12 @@
   <h2>About This Project</h2>
   <p>This is a simple Django app demonstrating templates and static files.</p>
   <p>Created as part of a quick setup to add HTML and CSS.</p>
+
+  <nav>
+    <a href="base.html">Base</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+  </nav>
 </div>
 
 
