--- a/hello_world/templates/hello_world/index.html
+++ b/hello_world/templates/hello_world/index.html
@@ -13,6 +13,12 @@
 <div class="container">
   <h2>Welcome!</h2>
   <p>This is the homepage served from a Django template.</p>
+
+  <nav>
+    <a href="base.html">Base</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+  </nav>
 </div>
 
  
