--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,3 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #720d0d;
-    margin: 0;
-    padding: 0;
+    background-color: #b43838;
 }
