--- a/hello_world/templates/hello_world/base.html
+++ b/hello_world/templates/hello_world/base.html
@@ -12,8 +12,9 @@
         <div class="site-header">
             <h1>HELLO WORLD</h1>
             <nav class="site-nav">
-                <a href="{% url 'home' %}">Home</a>
-                <a href="{% url 'about' %}">About</a>
+                <a href="base.html">Base</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 
             </nav>
         </div>
@@ -22,7 +23,7 @@
         
     </main>
     <footer>
-        <p>&copy; {{ year|default:"2026" }}</p>
+        <p>year "2026"</p>
     </footer>
 </body>
 </html>
